--- a/src/components/global/Main/Main.scss
+++ b/src/components/global/Main/Main.scss
@@ -1,7 +1,8 @@
 main {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     width: 100vw;
-    height: 800px;
+    height: 2000px;
 }
+
