--- a/src/components/home/Hero/Hero.scss
+++ b/src/components/home/Hero/Hero.scss
@@ -1,20 +1,17 @@
-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 800px;
-}
+// .rellax {
+    
+// }
 
 .hexagon {
     overflow: hidden;
-    visibility: hidden;
+    // visibility: hidden;
     -webkit-transform: rotate(120deg);
        -moz-transform: rotate(120deg);
         -ms-transform: rotate(120deg);
          -o-transform: rotate(120deg);
             transform: rotate(120deg);
     // cursor: pointer;
+    border: 3px solid grey;
 }
 .hexagon-in1 {
     overflow: hidden;
@@ -25,19 +22,21 @@ section {
         -ms-transform: rotate(-60deg);
          -o-transform: rotate(-60deg);
             transform: rotate(-60deg);
+    border: 3px solid grey;
 }
 .hexagon-in2 {
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
     background-position: 50%;
-    background-image: url('./Capture.JPG');
+    background-image: url('./logo_hero_big_rev.png');
     visibility: visible;
     -webkit-transform: rotate(-60deg);
        -moz-transform: rotate(-60deg);
         -ms-transform: rotate(-60deg);
          -o-transform: rotate(-60deg);
             transform: rotate(-60deg);
+    border: 3px solid grey;
 }
 .hexagon-in2:hover {
     background-image: url(http://placekitten.com/241/241);
@@ -46,5 +45,5 @@ section {
 .hexagon1 {
     width: 800px;
     height: 400px;
-    // margin: 0 0 0 -80px;
+    margin: 0 0 0 80px;
 }
