--- a/src/components/global/Main/Main.scss
+++ b/src/components/global/Main/Main.scss
@@ -3,6 +3,6 @@ main {
     justify-content: space-evenly;
     align-items: center;
     width: 100vw;
-    height: 2000px;
+    // height: 2000px;
 }
 
