--- a/src/components/home/Bullet/Bullet.scss
+++ b/src/components/home/Bullet/Bullet.scss
@@ -1,5 +1,7 @@
+@import '../../../styles/variables.scss';
+
 .bullet {
     padding: 30px;
-    font-family: sans-serif;
+    font-family: 'Rubik', sans-serif;
     font-size: xx-large;
 }
