--- a/src/components/global/Header/Navbar/Navbar.scss
+++ b/src/components/global/Header/Navbar/Navbar.scss
@@ -1,10 +1,9 @@
 @import '../../../../styles/variables';
 @import '../../../../styles/reset';
-// @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
 
 nav, .nav-links {
-    // background-color: $brown;
-    // color: $yellow-light;
+    background-color: black;
+    color: white;
     height: 100px;
 }
 
@@ -20,14 +19,13 @@ nav, .nav-links {
     margin-left: 20px;
     font-size: x-large;
     cursor: pointer;
-    // font-family: 'Black Han Sans', sans-serif;
     white-space: pre-wrap;
     text-align: center;
 }
 
-// .navbar-logo span {
-    // color: $yellow;
-// }
+.navbar-logo span {
+    color: white;
+}
 
 .nav-menu {
     display: grid;
@@ -42,7 +40,7 @@ nav, .nav-links {
 .nav-links {
     text-decoration: none;
     padding-left: 2rem;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Rubik', sans-serif;
 }
 
 .nav-links-mobile {
