--- a/src/components/global/Header/Navbar/Navbar.scss
+++ b/src/components/global/Header/Navbar/Navbar.scss
@@ -109,7 +109,7 @@ nav, .nav-links {
     }
     
     .menu-icon i svg {
-        fill: black !important;
+        fill: white !important;
     }
 
     .bars-shown, .x-shown {
