--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -6,10 +6,10 @@
     height: 800px;
 }
 
-.Home-logo {
-    flex-direction: column;
-    align-items: flex-end;
-}
+// .Home-logo {
+//     flex-direction: column;
+//     align-items: flex-end;
+// }
 
 .col-home {
     position: -webkit-sticky;
