--- a/src/components/home/Bullet/Bullet.scss
+++ b/src/components/home/Bullet/Bullet.scss
@@ -1,12 +1,22 @@
 @import '../../../styles/variables.scss';
 
-.bullet {
+.bullet-text {
     padding: 30px;
     font-family: 'Rubik', sans-serif;
     font-size: xx-large;
+    color: black;
 
     &:hover {
         color: white;
         background-color: black;
+        text-decoration: underline;
     }
+}
+
+.bullet-description {
+    display: none;
+}
+
+.active .bullet-description {
+    display: block !important;
 }
