--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -2,19 +2,22 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 100vw;
-    height: 800px;
+    // width: 100vw;
+    height: 2000px;
 }
 
-// .Home-logo {
-//     flex-direction: column;
-//     align-items: flex-end;
-// }
+.Home-logo {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 60vw;
+}
 
 .col-home {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    width: 20vw;
 }
 
 .col-home-1 {
@@ -25,4 +28,24 @@
 .col-home-2 {
     text-align: left;
     width: 200px;
+}
+
+.Home-bottom-section {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    padding: 30px;
+    height: 90px;
+    font-family: 'Rubik', sans-serif;
+    font-size: x-large;
+    color: white;
+    background-color: black;
+}
+
+.Home-bottom-section1 {
+    text-align: left;
+}
+
+.Home-bottom-section2 {
+    text-align: right;
 }
