--- a/src/components/home/Bullet/Bullet.scss
+++ b/src/components/home/Bullet/Bullet.scss
@@ -5,12 +5,12 @@
     font-family: 'Rubik', sans-serif;
     font-size: xx-large;
     color: black;
+}
 
-    &:hover {
-        color: white;
-        background-color: black;
-        text-decoration: underline;
-    }
+.bullet-text:hover, .active .bullet-text{
+    color: white;
+    background-color: black;
+    text-decoration: underline;
 }
 
 .bullet-description {
