--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -3,13 +3,16 @@
     justify-content: space-evenly;
     align-items: center;
     // width: 100vw;
-    height: 2000px;
+    height: 2500px;
 }
 
 .Home-logo {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: space-evenly;
+    // position: absolute;
+    // top: 30;
     width: 60vw;
 }
 
@@ -30,16 +33,23 @@
     width: 200px;
 }
 
+.home-bottom {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
 .Home-bottom-section {
-    position: -webkit-sticky;
-    position: sticky;
+    // position: -webkit-sticky;
+    // position: sticky;
     top: 0;
-    padding: 30px;
     height: 90px;
     font-family: 'Rubik', sans-serif;
     font-size: x-large;
     color: white;
     background-color: black;
+    width: 55vw;
+    padding: 2.5vw;
 }
 
 .Home-bottom-section1 {
