--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -9,8 +9,8 @@
 .Home-logo {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-evenly;
+    // align-items: flex-start;
+    // justify-content: space-evenly;
     // position: absolute;
     // top: 30;
     width: 60vw;
