--- a/src/App.scss
+++ b/src/App.scss
@@ -3,4 +3,9 @@
     align-items: center;
     flex-direction: column;
     // width: 100vw;
+    scrollbar-width: thin;
 }
+
+// ::-webkit-scrollbar { 
+//     display: none; 
+// }
