Refactoring home page side bullet points

--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -1,36 +1,39 @@
+@import '../../styles/variables';
+@import '../../styles/reset';
+@import '../../styles/mixins';
+
 .Home {
     display: flex;
-    justify-content: space-evenly;
+    // justify-content: space-evenly;
     align-items: center;
     // width: 100vw;
     height: 2500px;
 }
 
 .Home-logo {
-    display: flex;
-    flex-direction: column;
-    // align-items: flex-start;
+    @include coln;
+    align-items: center;
     // justify-content: space-evenly;
     // position: absolute;
     // top: 30;
     width: 60vw;
 }
 
-.col-home {
+.col-home-1, .col-home-3 {
+    @include coln;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    height: auto;
     width: 20vw;
 }
 
 .col-home-1 {
     text-align: right;
-    width: 200px;
 }
 
-.col-home-2 {
+.col-home-3 {
     text-align: left;
-    width: 200px;
 }
 
 .home-bottom {
@@ -48,7 +51,7 @@
     font-size: x-large;
     color: white;
     background-color: black;
-    width: 55vw;
+    width: 25vw;
     padding: 2.5vw;
 }
 
