Preliminary refactoring done for home bottom section

--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -36,29 +36,8 @@
     text-align: left;
 }
 
-.home-bottom {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-.Home-bottom-section {
-    // position: -webkit-sticky;
-    // position: sticky;
-    top: 0;
-    height: 90px;
-    font-family: 'Rubik', sans-serif;
-    font-size: x-large;
-    color: white;
-    background-color: black;
-    width: 25vw;
-    padding: 2.5vw;
-}
-
-.Home-bottom-section1 {
-    text-align: left;
-}
-
-.Home-bottom-section2 {
-    text-align: right;
-}
+// .home-bottom {
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: space-around;
+// }
