Fixing sticky positioning

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,6 @@
     scrollbar-width: thin;
 }
 
-// ::-webkit-scrollbar { 
-//     display: none; 
-// }
+::-webkit-scrollbar { 
+    display: none; 
+}
