--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,5 @@
-// colours
-// $brown-dark: #633720;
-// $brown: #744529;
-// $yellow-light: #f6ecbb;
-// $yellow: #ecd574;
-// $yellow-dark: #e0bd4d;
+// dimensions
+$home-height: 3000px;
 
 // fonts
 @import url('https://fonts.googleapis.com/css2?family=Signika&display=swap');
