--- a/src/components/global/FadeInSection/FadeInSection.scss
+++ b/src/components/global/FadeInSection/FadeInSection.scss
@@ -5,7 +5,7 @@ section {
     height: 64px;
     opacity: 0;
     transform: translate(0, 50%);
-    visibility: hidden;
+    // visibility: hidden;
     transition: opacity 300ms ease-out, transform 300ms ease-out;
     will-change: opacity, visibility;
 }
