--- a/src/components/global/Main/Main.scss
+++ b/src/components/global/Main/Main.scss
@@ -1,8 +1,9 @@
+@import '../../../styles/variables';
+
 main {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     width: 100vw;
-    // height: 2000px;
 }
 
