Adding styles for responsive layout

--- a/src/components/home/BulletCentre/BulletCentre.scss
+++ b/src/components/home/BulletCentre/BulletCentre.scss
@@ -3,7 +3,7 @@
 .Home-bottom-section {
     // position: -webkit-sticky;
     // position: sticky;
-    top: 0;
+    // top: 0;
     height: 90px;
     font-family: 'Rubik', sans-serif;
     font-size: x-large;
@@ -24,5 +24,50 @@
     &.Home-bottom-section-right {
         text-align: right;
         align-items: flex-end;
+    }
+}
+
+.bulletCentre-el1 {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .Home-bottom-section {
+        width: 50vw;
+        padding: 2.5vw;
+        font-size: large;
+    }
+    
+    .bulletCentre-wrap {
+    
+        &.Home-bottom-section-left, &.Home-bottom-section-right {
+            padding: 1vw;
+            width: 100%;
+        }
+    }
+
+    .bulletCentre-top {
+        @include coln;
+    }
+
+    .Home-bottom-section-right .bulletCentre-top .bulletCentre-el1 {
+            text-align: left;
+            align-items: flex-end;
+    }
+
+    .bulletCentre-el1 {
+        display: block;
+        width: 28%;
+        text-align: right;
+        font-family: 'Rubik', sans-serif;
+        font-size: x-large;
+        color: white;
+        background-color: black;
+        padding: 2%;
+    }
+
+    .bulletCentre-el2 {
+        align-self: flex-end;
+        width: 70%;
     }
 }
