--- a/src/components/home/BulletCentre/BulletCentre.scss
+++ b/src/components/home/BulletCentre/BulletCentre.scss
@@ -33,8 +33,8 @@
 
 @media screen and (max-width: 768px) {
     .Home-bottom-section {
-        width: 50vw;
-        padding: 2.5vw;
+        width: 100%;
+        // padding: 2.5vw;
         font-size: large;
     }
     
@@ -48,6 +48,7 @@
 
     .bulletCentre-top {
         @include coln;
+        width: 100%
     }
 
     .Home-bottom-section-right .bulletCentre-top .bulletCentre-el1 {
@@ -63,11 +64,26 @@
         font-size: x-large;
         color: white;
         background-color: black;
-        padding: 2%;
+        padding: 1%;
+    }
+    
+    .Home-bottom-section-left .bulletCentre-top .bulletCentre-el1 {
+        align-self: flex-start;
+        width: 28%;
     }
 
-    .bulletCentre-el2 {
+    .Home-bottom-section-left .bulletCentre-top .bulletCentre-el2 {
         align-self: flex-end;
-        width: 70%;
+        width: 68%;
+    }
+
+    .Home-bottom-section-right .bulletCentre-top .bulletCentre-el1 {
+        align-self: flex-end;
+        width: 28%;
+    }
+
+    .Home-bottom-section-right .bulletCentre-top .bulletCentre-el2 {
+        align-self: flex-start;
+        width: 68%;
     }
 }
