--- a/src/components/global/Header/Navbar/Navbar.scss
+++ b/src/components/global/Header/Navbar/Navbar.scss
@@ -21,6 +21,8 @@ nav, .nav-links {
     cursor: pointer;
     white-space: pre-wrap;
     text-align: center;
+    font-family: 'Rubik', sans-serif;
+    border-bottom: 1px solid white;
 }
 
 .navbar-logo span {
