--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -6,7 +6,7 @@
     display: flex;
     // justify-content: space-evenly;
     align-items: center;
-    // width: 100vw;
+    width: 100vw;
     height: 300vh;
 }
 
@@ -28,7 +28,7 @@
     align-items: flex-start;
     // justify-content: flex-start;
     height: $home-height - 500px;
-    // height: 100%;
+    height: 100%;
     width: 20vw;
 }
 
@@ -51,6 +51,7 @@
 }
 
 .home-bottom {
+    width: 60vw;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -66,7 +67,7 @@
     }
 
     .Home-bottom {
-        width: 90%;
+        width: 100%;
     }
 
     .col-home-1, .col-home-3 {
