Adding basic layout and page-specific class

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,3 +4,6 @@ $home-height: 3000px;
 // fonts
 @import url('https://fonts.googleapis.com/css2?family=Signika&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+
+// colors
+$dark-grey:#363636;
