--- a/src/components/professional/card/Card.scss
+++ b/src/components/professional/card/Card.scss
@@ -4,7 +4,19 @@
 
 .professional-card {
     @include coln;
+    justify-content: space-around;
     background-color: $dark-grey;
     color: white;
     font-family: 'Rubik', sans-serif;
+    padding: 2rem;
+    font-size: large;
+}
+
+.professional-line {
+    padding: 1rem;
+    text-align: center;
+}
+
+.professional-character {
+    font-size: xx-large;
 }
