Added preliminary copy and layout

--- a/src/components/education/EduSection/EduSection.scss
+++ b/src/components/education/EduSection/EduSection.scss
@@ -12,9 +12,8 @@
     font-size: large;
 }
 
-.eduSection-line {
+.eduSection div {
     padding: 1rem;
-    text-align: center;
 }
 
 .professional-character {
