Added and linked to hobbies section

--- a/src/components/global/Footer/Footer.scss
+++ b/src/components/global/Footer/Footer.scss
@@ -13,7 +13,7 @@
     justify-content: space-between;
 }
 
-.footer-row-top div {
+.footer-row-top a {
     display: flex;
     flex-direction: column;
 }
