Hobbies section completed

--- a/src/components/education/EduSection/EduSection.scss
+++ b/src/components/education/EduSection/EduSection.scss
@@ -13,9 +13,13 @@
 }
 
 .eduSection div {
-    padding: 1rem;
+    padding-bottom: 1rem;
 }
 
 .professional-character {
     font-size: xx-large;
+}
+
+.eduSection-summary {
+    line-height: 1.5;
 }
