Added underlining for nav items

--- a/src/components/professional/Professional.scss
+++ b/src/components/professional/Professional.scss
@@ -6,5 +6,5 @@
     width: 95vw;
     padding: 2.5vw 2rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
