--- a/src/components/global/Header/Navbar/Navbar.scss
+++ b/src/components/global/Header/Navbar/Navbar.scss
@@ -14,6 +14,11 @@ nav, .nav-links {
     font-size: 1.2rem;
 }
 
+.nav-menu .nav-links {
+    display: flex;
+    align-items: center;
+}
+
 .navbar-logo {
     justify-self: start;
     margin-left: 20px;
@@ -51,6 +56,10 @@ nav, .nav-links {
 
 .menu-icon {
     display: none;
+}
+
+.nav-links-active {
+    text-decoration: underline;
 }
 
 @media screen and (max-width: 768px) {
