Resolving layout conflicts

--- a/src/components/education/Education.scss
+++ b/src/components/education/Education.scss
@@ -18,3 +18,17 @@
 .eduLogo {
     padding: 2rem 0 0 2rem;
 }
+
+@media screen and (max-width: 992px) {
+    .education {
+        @include coln;
+        align-items: center;
+        width: auto;
+    }
+
+    .education-section {
+        width: 95%;
+        padding: 2.5% 2rem;
+        border-bottom: 1rem solid white;
+    }
+}
