--- a/src/components/professional/Professional.scss
+++ b/src/components/professional/Professional.scss
@@ -8,3 +8,13 @@
     display: flex;
     justify-content: space-around;
 }
+
+@media screen and (max-width: 992px) {
+    .professional {
+        @include coln;
+    }
+
+    .professional-card {
+        border-bottom: 1rem solid white;
+    }
+}
