--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -7,7 +7,7 @@
     // justify-content: space-evenly;
     align-items: center;
     width: 100vw;
-    height: 300vh;
+    height: 3000px;
 }
 
 .Home-logo {
