Added simple animation for element 1

--- a/src/components/professional/card/Card.scss
+++ b/src/components/professional/card/Card.scss
@@ -20,3 +20,12 @@
 .professional-character {
     font-size: xx-large;
 }
+
+.professional-character .blink {
+    animation: blinker 1s linear infinite;
+}
+@keyframes blinker {
+    50% {
+      opacity: 0;
+    }
+}
