Added simple animation for element 2

--- a/src/components/professional/card/Card.scss
+++ b/src/components/professional/card/Card.scss
@@ -29,3 +29,27 @@
       opacity: 0;
     }
 }
+
+.professional-character .spacing {
+    // position: absolute;
+    // top: calc(50% - 21px);
+    left: 0;
+    opacity: 0;
+    animation: in 3s ease-out forwards infinite;
+    animation-delay: 1s;
+}
+
+@keyframes in{
+    0%{
+    letter-spacing: -17px;
+    opacity: 0;
+    }
+    30%{
+    letter-spacing: 4px;
+    opacity: 1;
+    }
+    100%{
+    letter-spacing: 4px;
+    opacity: 1;
+    }
+}
