--- a/src/components/hobbies/Hobbies.scss
+++ b/src/components/hobbies/Hobbies.scss
@@ -6,6 +6,11 @@
     font-family: 'Rubik', sans-serif;
     text-align: center;
     padding-top: 5rem;
+    
+    position: relative;
+    bottom: -1em;
+    opacity: 0;
+    animation: fade-in 0.8s forwards;
 
     & div {
         padding: 1rem;
@@ -23,4 +28,21 @@
 
 .hobbies-body {
     font-size: large;
+}
+  
+@keyframes fade-in {
+    0% {
+        bottom: -0.2em;
+        opacity: 0;
+    }
+
+    50% {
+        bottom: -0.1em;
+        opacity: 0.5;
+    }
+
+    100% {
+        bottom: 0;
+        opacity: 1;
+    }
 }
