Added padding to parallax section to resolve responsive issues

--- a/src/components/home/BulletCentre/BulletCentre.scss
+++ b/src/components/home/BulletCentre/BulletCentre.scss
@@ -35,7 +35,7 @@
     .Home-bottom-section {
         width: 100%;
         // padding: 2.5vw;
-        font-size: large;
+        // font-size: large;
     }
     
     .bulletCentre-wrap {
