--- a/src/components/professional/card/Card.scss
+++ b/src/components/professional/card/Card.scss
@@ -21,6 +21,10 @@
     font-size: xx-large;
 }
 
+.professional-header {
+    color: $dark-gold;
+}
+
 .professional-character .blink {
     animation: blinker 1s linear infinite;
 }
