--- a/src/components/global/Header/Navbar/Navbar.scss
+++ b/src/components/global/Header/Navbar/Navbar.scss
@@ -29,6 +29,8 @@ nav, .nav-links {
     text-align: center;
     font-family: 'Rubik', sans-serif;
     border-bottom: 1px solid white;
+    color: white;
+    text-decoration: none;
 }
 
 .nav-menu {
