remodeled home page

--- a/src/components/home/Hero/Hero.scss
+++ b/src/components/home/Hero/Hero.scss
@@ -39,6 +39,10 @@
     margin: 0 0 0 80px;
 }
 
+.custom-class {
+    padding-top: 15rem;
+}
+
 @media screen and (max-width: 992px) {
     .hexagon1 {
         width: 500px;
