--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -4,9 +4,8 @@
 
 .Home {
     display: flex;
-    align-items: center;
+    justify-content: center;
     width: 100vw;
-    height: 3000px;
 }
 
 .Home-logo {
@@ -16,6 +15,7 @@
 
 .col-home-2 {
     width: 60vw;
+    font-family: 'Rubik', sans-serif;
 }
 
 .col-home-1, .col-home-3 {
@@ -58,7 +58,6 @@
     }
 
     .col-home-2 {
-        padding-top: 50vh;
         width: 100vw;
     }
 
