--- a/src/components/home/HomeDivider/HomeDivider.scss
+++ b/src/components/home/HomeDivider/HomeDivider.scss
@@ -1,4 +1,9 @@
-.projects-title {
+.home-graphic svg {
+    width: 3rem;
+    height: auto;
+}
+
+.home-title {
     width: 100vw;
     background-color: black;
     color: white;
