--- a/src/components/global/Footer/Footer.scss
+++ b/src/components/global/Footer/Footer.scss
@@ -94,6 +94,11 @@ svg {
     }
 }
 
+#tQ-logo {
+    align-self: flex-end;
+    margin-bottom: -31px;
+}
+
 @media screen and (max-width: 768px) {
     footer {
         flex-direction: column;
