revamp of several pages

--- a/src/components/education/EduSection/EduSection.scss
+++ b/src/components/education/EduSection/EduSection.scss
@@ -39,6 +39,9 @@
     animation-delay: 0.4s;
 }
 
+.eduSection-cert {
+    font-size: medium;
+}
 
 .eduSection-timespan span {
     animation-delay: 0.6s;
