--- a/src/components/home/HomeDivider/HomeDivider.scss
+++ b/src/components/home/HomeDivider/HomeDivider.scss
@@ -3,6 +3,10 @@
     height: auto;
 }
 
+.home-graphic {
+    padding-right: 0px;
+}
+
 .home-title {
     width: 100vw;
     background-color: black;
