--- a/src/components/home/Tagline/Tagline.scss
+++ b/src/components/home/Tagline/Tagline.scss
@@ -5,6 +5,9 @@
     color: black;
     font-size: 1.2rem;
     padding-bottom: 2rem;
+    :last-child {
+        padding-bottom: 0;
+    }
 }
 
 .tag-wrapper div {
@@ -24,6 +27,7 @@
         height: auto;
         padding-left: 1rem;
         padding-top: 1rem;
+        padding-right: 1rem;
         fill: $dark-gold;
     }
 }
