--- a/src/components/home/Hero/Hero.scss
+++ b/src/components/home/Hero/Hero.scss
@@ -43,7 +43,7 @@
     padding-top: 15rem;
 }
 
-@media screen and (max-width: 992px) {
+// @media screen and (max-width: 992px) {
     .hexagon1 {
         width: 400px;
         height: 200px;
@@ -53,4 +53,4 @@
     .hexagon-in2 {
         background-image: url('./mangatar.png');
     }
-}
+// }
