--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -13,14 +13,23 @@
     align-items: center;
 }
 
+.Home-top {
+    display: flex;
+    width: 90vw;
+    align-items: center;
+}
+
 .col-home-2 {
     width: 60vw;
     font-family: 'Rubik', sans-serif;
 }
 
-.home-tech {
+.home-tech, .home-value {
     font-size: larger;
     padding: 1rem 1rem;
+    li {
+        padding-bottom: 0.5rem
+    }
 }
 
 .col-home-1, .col-home-3 {
@@ -59,6 +68,10 @@
 
 @media screen and (max-width: 768px) {
     .Home {
+        @include coln;
+    }
+
+    .Home-top {
         @include coln;
     }
 
