--- a/src/components/home/Hero/Hero.scss
+++ b/src/components/home/Hero/Hero.scss
@@ -43,14 +43,24 @@
     padding-top: 15rem;
 }
 
-// @media screen and (max-width: 992px) {
+.hexagon1 {
+    width: 400px;
+    height: 200px;
+    margin: 0 0 0 0px;
+}
+
+.hexagon-in2 {
+    background-image: url('./mangatar.png');
+}
+
+@media screen and (max-width: 768px) {
     .hexagon1 {
-        width: 400px;
-        height: 200px;
+        width: 390px;
+        height: 195px;
         margin: 0 0 0 0px;
     }
-    
+
     .hexagon-in2 {
-        background-image: url('./mangatar.png');
+        background-image: url('./mangatar_pixel.png');
     }
-// }
+}
