--- a/src/components/professional/card/Card.scss
+++ b/src/components/professional/card/Card.scss
@@ -34,6 +34,7 @@
 
 .professional-header,.professional-summary {
     font-size: x-large;
+    background-color: black;
 }
 
 .professional-character .blink {
